--- a/WebAPI.OData.EFCore/appsettings.json
+++ b/WebAPI.OData.EFCore/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQL2016;Database=YourDB;Trusted_Connection=True;"
+    "DefaultConnection": "DataSource=test.db"
   },
   "Logging": {
     "LogLevel": {
